adicionando o clone de projetos

--- a/nodes/project/project.html
+++ b/nodes/project/project.html
@@ -19,7 +19,7 @@
         outputs:2,
         icon: "file.png",
         label: function() {
-            return "OZMap: "+this.name;
+            return "OZMap:Project:"+this.name;
         },
         oneditprepare: function() {
             $("#node-input-createdAt").datepicker();
