fix: Corrigido nomes

--- a/nodes/client/deleteClient.html
+++ b/nodes/client/deleteClient.html
@@ -28,12 +28,12 @@
     <div class="form-row">
         <br/><br/>
         <a style="color: blue" href="https://api.ozmap.com.br/#/Cliente/delete_ftth_clients__client_id_" target="_blank">
-            https://api.ozmap.com.br/#/Cliente/post_ftth_clients__client_id_
+            https://api.ozmap.com.br/#/Cliente/delete_ftth_clients__client_id_
         </a>
     </div>
 
 </script>
 
-<script type="text/html" data-help-name="createClient">
+<script type="text/html" data-help-name="deleteClient">
     <p>DeleteClients from ozmap</p>
 </script>
