--- a/nodes/property/getPropertyByClientId.html
+++ b/nodes/property/getPropertyByClientId.html
@@ -1,39 +1,38 @@
 <script type="text/javascript">
-    RED.nodes.registerType('getPropertyByClientId',{
-        category: 'ozmap',
-        color: '#a6bbcf',
-        defaults: {
-            name: { value:"getPropertyByClientId" },
-            ozmapconnection: {value:"", type:"ozmap-connection"},
-        },
+  RED.nodes.registerType('getPropertyByClientId', {
+    category: 'ozmap',
+    color: '#a6bbcf',
+    defaults: {
+      name: { value: 'getPropertyByClientId' },
+      ozmapconnection: { value: '', type: 'ozmap-connection' },
+    },
 
-        inputs:1,
-        outputs:2,
-        icon: "file.png",
-        label: function() {
-            return "OZMap: "+this.name;
-        }
-    });
+    inputs: 1,
+    outputs: 2,
+    icon: 'file.png',
+    label: function () {
+      return 'OZMap: ' + this.name;
+    },
+  });
 </script>
 
 <script type="text/html" data-template-name="getPropertyByClientId">
-    <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
-    </div>
-    <div class="form-row">
-        <label for="node-input-ozmapconnection"><i class="fa fa-tag"></i> OZMap Connection</label>
-        <input type="text" id="node-input-ozmapconnection" placeholder="Name">
-    </div>
-    <div class="form-row">
-        <br/><br/>
-        <a style="color: blue" href="https://api.ozmap.com.br/#/Caixa/get_getPropertyByClientIdes" target="_blank">
-            https://api.ozmap.com.br/#/Caixa/get_getPropertyByClientIdes
-        </a>
-    </div>
-
+  <div class="form-row">
+    <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+    <input type="text" id="node-input-name" placeholder="Name" />
+  </div>
+  <div class="form-row">
+    <label for="node-input-ozmapconnection"><i class="fa fa-tag"></i> OZMap Connection</label>
+    <input type="text" id="node-input-ozmapconnection" placeholder="Name" />
+  </div>
+  <div class="form-row">
+    <br /><br />
+    <a style="color: blue" href="https://api.ozmap.com.br/#/Caixa/get_getPropertyByClientIdes" target="_blank">
+      https://api.ozmap.com.br/#/Caixa/get_getPropertyByClientIdes
+    </a>
+  </div>
 </script>
 
 <script type="text/html" data-help-name="getPropertyByClientId">
-    <p>Get getPropertyByClientId from ozmap</p>
+  <p>Get getPropertyByClientId from ozmap</p>
 </script>
