--- a/nodes/region/region.html
+++ b/nodes/region/region.html
@@ -1,39 +1,38 @@
 <script type="text/javascript">
-    RED.nodes.registerType('region',{
-        category: 'ozmap',
-        color: '#a6bbcf',
-        defaults: {
-            name: { value:"Region" },
-            ozmapconnection: {value:"", type:"ozmap-connection"},
-        },
+  RED.nodes.registerType('region', {
+    category: 'ozmap',
+    color: '#a6bbcf',
+    defaults: {
+      name: { value: 'Region' },
+      ozmapconnection: { value: '', type: 'ozmap-connection' },
+    },
 
-        inputs:1,
-        outputs:2,
-        icon: "file.png",
-        label: function() {
-            return "OZMap: "+this.name;
-        }
-    });
+    inputs: 1,
+    outputs: 2,
+    icon: 'file.png',
+    label: function () {
+      return 'OZMap: ' + this.name;
+    },
+  });
 </script>
 
 <script type="text/html" data-template-name="region">
-    <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
-    </div>
-    <div class="form-row">
-        <label for="node-input-ozmapconnection"><i class="fa fa-tag"></i> OZMap Connection</label>
-        <input type="text" id="node-input-ozmapconnection" placeholder="Name">
-    </div>
-<!--    <div class="form-row">-->
-<!--        <br/><br/>-->
-<!--        <a style="color: blue" href="https://api.ozmap.com.br/#/Caixa/get_regiones" target="_blank">-->
-<!--            https://api.ozmap.com.br/#/Caixa/get_regiones-->
-<!--        </a>-->
-<!--    </div>-->
-
+  <div class="form-row">
+    <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+    <input type="text" id="node-input-name" placeholder="Name" />
+  </div>
+  <div class="form-row">
+    <label for="node-input-ozmapconnection"><i class="fa fa-tag"></i> OZMap Connection</label>
+    <input type="text" id="node-input-ozmapconnection" placeholder="Name" />
+  </div>
+  <!--    <div class="form-row">-->
+  <!--        <br/><br/>-->
+  <!--        <a style="color: blue" href="https://api.ozmap.com.br/#/Caixa/get_regiones" target="_blank">-->
+  <!--            https://api.ozmap.com.br/#/Caixa/get_regiones-->
+  <!--        </a>-->
+  <!--    </div>-->
 </script>
 
 <script type="text/html" data-help-name="region">
-    <p>Get regions from ozmap</p>
+  <p>Get regions from ozmap</p>
 </script>
