AUT-835 refactor: #time 783m Update ozmap-sdk version and nodes functions

--- a/nodes/client/client.html
+++ b/nodes/client/client.html
@@ -5,8 +5,9 @@
     defaults: {
       name: { value: 'Client' },
       ozmapconnection: { value: '', type: 'ozmap-connection' },
+      limit: { type: 'number', value: '' },
+      page: { type: 'number', value: '' },
     },
-
     inputs: 1,
     outputs: 2,
     icon: 'file.png',
@@ -18,18 +19,23 @@
 
 <script type="text/html" data-template-name="client">
   <div class="form-row">
+    <a style="color: blue" href="https://ozmap.stoplight.io/docs/ozmap/cfcc60431a133-list-clients" target="_blank">
+      https://ozmap.stoplight.io/docs/ozmap/cfcc60431a133-list-clients
+    </a>
+  </div>
+  <div class="form-row">
     <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
     <input type="text" id="node-input-name" placeholder="Name" />
   </div>
   <div class="form-row">
-    <label for="node-input-ozmapconnection"><i class="fa fa-tag"></i> OZMap Connection</label>
-    <input type="text" id="node-input-ozmapconnection" placeholder="Name" />
+    <label for="node-input-ozmapconnection"><i class="fa fa-tag"></i> Connection</label>
+    <input type="text" id="node-input-ozmapconnection" placeholder="OZMap Connection" />
   </div>
   <div class="form-row">
-    <br /><br />
-    <a style="color: blue" href="https://api.ozmap.com.br/#/Cliente/get_ftth_clients" target="_blank">
-      https://api.ozmap.com.br/#/Cliente/get_ftth_clients
-    </a>
+    <label for="node-input-page"><i class="fa fa-sort-numeric-desc"></i> Page</label>
+    <input style="width:25%" type="number" id="node-input-page" placeholder="Page" /> &nbsp;
+    <label for="node-input-limit"><i class="fa fa-sort-numeric-desc"></i> Limit</label>
+    <input style="width:25%" type="number" id="node-input-limit" placeholder="Limit" />
   </div>
 </script>
 
