--- a/nodes/property/updateProperty.html
+++ b/nodes/property/updateProperty.html
@@ -27,12 +27,12 @@
   </div>
   <div class="form-row">
     <br /><br />
-    <a style="color: blue" href="https://api.ozmap.com.br/#/Caixa/get_updatePropertyes" target="_blank">
-      https://api.ozmap.com.br/#/Caixa/get_updatePropertyes
+    <a style="color: blue" href="https://ozmap.stoplight.io/docs/ozmap/bad552b7cc42c-update-a-property" target="_blank">
+      https://ozmap.stoplight.io/docs/ozmap/bad552b7cc42c-update-a-property
     </a>
   </div>
 </script>
 
 <script type="text/html" data-help-name="updateProperty">
-  <p>Get updateProperty from ozmap</p>
+  <p>Update a property from ozmap</p>
 </script>
