--- a/nodes/user/createUser.html
+++ b/nodes/user/createUser.html
@@ -27,12 +27,12 @@
   </div>
   <div class="form-row">
     <br /><br />
-    <a style="color: blue" href="https://api.ozmap.com.br/#/Caixa/get_useres" target="_blank">
-      https://api.ozmap.com.br/#/Caixa/get_useres
+    <a style="color: blue" href="https://ozmap.stoplight.io/docs/ozmap/a8c2826257b30-create-an-user" target="_blank">
+      https://ozmap.stoplight.io/docs/ozmap/a8c2826257b30-create-an-user
     </a>
   </div>
 </script>
 
 <script type="text/html" data-help-name="createUser">
-  <p>Create an user from ozmap</p>
+  <p>Create an user in ozmap</p>
 </script>
