--- a/nodes/client/updateClient.html
+++ b/nodes/client/updateClient.html
@@ -27,12 +27,12 @@
   </div>
   <div class="form-row">
     <br /><br />
-    <a style="color: blue" href="https://api.ozmap.com.br/#/Caixa/get_updateClientes" target="_blank">
-      https://api.ozmap.com.br/#/Caixa/get_updateClientes
+    <a style="color: blue" href="https://ozmap.stoplight.io/docs/ozmap/934d26a9b4202-update-a-client" target="_blank">
+      https://ozmap.stoplight.io/docs/ozmap/934d26a9b4202-update-a-client
     </a>
   </div>
 </script>
 
 <script type="text/html" data-help-name="updateClient">
-  <p>Get updateClients from ozmap</p>
+  <p>Update a client from ozmap</p>
 </script>
