--- a/nodes/project/project.html
+++ b/nodes/project/project.html
@@ -5,12 +5,6 @@
     defaults: {
       name: { value: 'Project' },
       ozmapconnection: { value: '', type: 'ozmap-connection' },
-      createdAt: { value: null },
-      createdAt1: { value: null },
-      updatedAt: { value: null },
-      updatedAt1: { value: null },
-      projectId: { value: null },
-      projectName: { value: null },
       limit: { type: 'number', value: '' },
       page: { type: 'number', value: '' },
     },
@@ -19,32 +13,15 @@
     outputs: 2,
     icon: 'file.png',
     label: function () {
-      return 'OZMap:Project:' + this.name;
-    },
-    oneditprepare: function () {
-      $('#node-input-createdAt').datepicker();
-      $('#node-input-createdAt').datepicker('option', 'dateFormat', 'yy-mm-ddT00:00:00.000Z');
-      $('#node-input-createdAt').datepicker('setDate', this.createdAt);
-
-      $('#node-input-createdAt1').datepicker();
-      $('#node-input-createdAt1').datepicker('option', 'dateFormat', 'yy-mm-ddT00:00:00.000Z');
-      $('#node-input-createdAt1').datepicker('setDate', this.createdAt1);
-
-      $('#node-input-updatedAt').datepicker();
-      $('#node-input-updatedAt').datepicker('option', 'dateFormat', 'yy-mm-ddT00:00:00.000Z');
-      $('#node-input-updatedAt').datepicker('setDate', this.updatedAt);
-
-      $('#node-input-updatedAt1').datepicker();
-      $('#node-input-updatedAt1').datepicker('option', 'dateFormat', 'yy-mm-ddT00:00:00.000Z');
-      $('#node-input-updatedAt1').datepicker('setDate', this.updatedAt1);
+      return 'OZMap: ' + this.name;
     },
   });
 </script>
 
 <script type="text/html" data-template-name="project">
   <div class="form-row">
-    <a style="color: blue" href="https://api.ozmap.com.br/#/Projetos/get_projects" target="_blank">
-      https://api.ozmap.com.br/#/Projetos/get_projects
+    <a style="color: blue" href="https://ozmap.stoplight.io/docs/ozmap/4e0dabdde7133-list-projects" target="_blank">
+      https://ozmap.stoplight.io/docs/ozmap/4e0dabdde7133-list-projects
     </a>
   </div>
   <div class="form-row">
@@ -60,35 +37,6 @@
     <input style="width:25%" type="number" id="node-input-page" placeholder="Page" /> &nbsp;
     <label for="node-input-limit"><i class="fa fa-sort-numeric-desc"></i> Limit</label>
     <input style="width:25%" type="number" id="node-input-limit" placeholder="Limit" />
-  </div>
-  <div class="form-row">
-    <b>Parametros de busca - deixar em branco para ignorar</b>
-  </div>
-  <div class="form-row">
-    <label for="node-input-projectId"><i class="fa fa-binoculars"></i> id</label>
-    <input type="text" id="node-input-projectId" placeholder="Id do Projeto" />
-  </div>
-  <div class="form-row">
-    <label for="node-input-projectName"><i class="fa fa-binoculars"></i> name</label>
-    <input type="text" id="node-input-projectName" placeholder="Nome do Projeto" />
-  </div>
-  <div class="form-row" style="height: 34px; width:90%">
-    <div style="width: 19%; float:left;"><i class="fa fa-binoculars"></i> createdAt</div>
-    <div style="width: 40%; float:left;">
-      <input style="width: 95%" type="text" id="node-input-createdAt" placeholder="Inicio" />
-    </div>
-    <div style="width: 40%; float:left;">
-      <input style="width: 96%" type="text" id="node-input-createdAt1" placeholder="Fim" />
-    </div>
-  </div>
-  <div class="form-row" style="height: 34px; width:90%">
-    <div style="width: 19%; float:left;"><i class="fa fa-binoculars"></i> updatedAt</div>
-    <div style="width: 40%; float:left;">
-      <input style="width: 95%" type="text" id="node-input-updatedAt" placeholder="Inicio" />
-    </div>
-    <div style="width: 40%; float:left;">
-      <input style="width: 96%" type="text" id="node-input-updatedAt1" placeholder="Fim" />
-    </div>
   </div>
 </script>
 
