--- a/nodes/property/property.html
+++ b/nodes/property/property.html
@@ -5,6 +5,8 @@
     defaults: {
       name: { value: 'Property' },
       ozmapconnection: { value: '', type: 'ozmap-connection' },
+      limit: { type: 'number', value: '' },
+      page: { type: 'number', value: '' },
     },
 
     inputs: 1,
@@ -18,18 +20,23 @@
 
 <script type="text/html" data-template-name="property">
   <div class="form-row">
+    <a style="color: blue" href="https://ozmap.stoplight.io/docs/ozmap/587e8a06c9f36-list-properties" target="_blank">
+      https://ozmap.stoplight.io/docs/ozmap/587e8a06c9f36-list-properties
+    </a>
+  </div>
+  <div class="form-row">
     <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
     <input type="text" id="node-input-name" placeholder="Name" />
   </div>
   <div class="form-row">
-    <label for="node-input-ozmapconnection"><i class="fa fa-tag"></i> OZMap Connection</label>
-    <input type="text" id="node-input-ozmapconnection" placeholder="Name" />
+    <label for="node-input-ozmapconnection"><i class="fa fa-tag"></i> Connection</label>
+    <input type="text" id="node-input-ozmapconnection" placeholder="OZMap Connection" />
   </div>
   <div class="form-row">
-    <br /><br />
-    <a style="color: blue" href="https://api.ozmap.com.br/#/Im%C3%B3vel/get_properties" target="_blank">
-      https://api.ozmap.com.br/#/Im%C3%B3vel/get_properties
-    </a>
+    <label for="node-input-page"><i class="fa fa-sort-numeric-desc"></i> Page</label>
+    <input style="width:25%" type="number" id="node-input-page" placeholder="Page" /> &nbsp;
+    <label for="node-input-limit"><i class="fa fa-sort-numeric-desc"></i> Limit</label>
+    <input style="width:25%" type="number" id="node-input-limit" placeholder="Limit" />
   </div>
 </script>
 
