--- a/nodes/user/updateUser.html
+++ b/nodes/user/updateUser.html
@@ -1,9 +1,9 @@
 <script type="text/javascript">
-  RED.nodes.registerType('getPropertyByClientId', {
+  RED.nodes.registerType('updateUser', {
     category: 'ozmap',
     color: '#a6bbcf',
     defaults: {
-      name: { value: 'getPropertyByClientId' },
+      name: { value: 'updateUser' },
       ozmapconnection: { value: '', type: 'ozmap-connection' },
     },
 
@@ -16,7 +16,7 @@
   });
 </script>
 
-<script type="text/html" data-template-name="getPropertyByClientId">
+<script type="text/html" data-template-name="updateUser">
   <div class="form-row">
     <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
     <input type="text" id="node-input-name" placeholder="Name" />
@@ -27,12 +27,12 @@
   </div>
   <div class="form-row">
     <br /><br />
-    <a style="color: blue" href="https://api.ozmap.com.br/#/Caixa/get_getPropertyByClientIdes" target="_blank">
-      https://api.ozmap.com.br/#/Caixa/get_getPropertyByClientIdes
+    <a style="color: blue" href="https://ozmap.stoplight.io/docs/ozmap/1647e993b423f-update-a-user" target="_blank">
+      https://ozmap.stoplight.io/docs/ozmap/1647e993b423f-update-a-user
     </a>
   </div>
 </script>
 
-<script type="text/html" data-help-name="getPropertyByClientId">
-  <p>Get getPropertyByClientId from ozmap</p>
+<script type="text/html" data-help-name="updateUser">
+  <p>Update an user from ozmap</p>
 </script>
